--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <p></p>
+        <p><a href="./recipes/veggie_sloppy_joes.html">Vegan Sloppy Joes</a></p>
     </body>
 </html>
