--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
         <h1>Odin Recipes</h1>
         <p></p>
         <p><a href="./recipes/veggie_sloppy_joes.html">Vegan Sloppy Joes</a></p>
+        <p><a href="./recipes/tofu_curry.html">Tofu Curry</a></p>
+        <p><a href="./recipes/mac_cheese.html">Homemade Mac&Cheese</a></p>
     </body>
 </html>
