--- a/recipes/veggie_sloppy_joes.html
+++ b/recipes/veggie_sloppy_joes.html
@@ -30,6 +30,7 @@
             <li>1 Poblano Pepper</li>
         </ul>
 
+        <h2>Steps:</h2>
         <ol>
             <li>Start by browning your "meat" in a skillet.</li>
             <li>Once meat is browned add in your diced red pepper and diced
